unpackaged/main/default/objects/ETST_Invoice_Address__mdt/ETST_Invoice_Address__mdt.object-meta.xml
<CustomObject>
    <label>ETST Invoice Address</label>
    <pluralLabel>ETST Invoice Address</pluralLabel>
</CustomObject>