unpackaged/main/default/objects/ETST_Invoice_Address__mdt/fields/Line_1__c.field-meta.xml
<CustomField>
    <fullName>Line_1__c</fullName>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>