unpackaged/main/default/objects/ETST_Invoice_Address__mdt/fields/Line_2__c.field-meta.xml
<CustomField>
    <fullName>Line_2__c</fullName>
    <label>Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>