unpackaged/main/default/objects/ETST_Invoice_Address__mdt/fields/Line_3__c.field-meta.xml
<CustomField>
    <fullName>Line_3__c</fullName>
    <label>Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>